--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
             <version>${junit.version}</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.itextpdf</groupId>
+            <artifactId>itext7-core</artifactId>
+            <version>8.0.2</version>
+        </dependency>
     </dependencies>
 
     <build>
